--- a/package.json
+++ b/package.json
@@ -24,5 +24,9 @@
         "sass": "^1.32.11",
         "sass-loader": "^11.0.1",
         "tailwindcss": "^3.0.0"
+    },
+    "dependencies": {
+        "brew": "^0.0.8",
+        "php": "^1.0.2"
     }
 }
