--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     },
     "dependencies": {
         "brew": "^0.0.8",
-        "php": "^1.0.2"
+        "php": "^1.0.2",
         "tailwindcss": "^3.2.1"
     }
 }
